--- a/public_html/login/index.html
+++ b/public_html/login/index.html
@@ -4,9 +4,16 @@
 	<title>Login</title>
 	<meta charset="UTF-8">
 </head>
+	<style>
+		div{text-align: center;}
+		h1{text-align: center;}
+		p{text-align: center;}
+		
+	</style>
 <body>
 
-	<h1>Login</h1>
+	<h1>Welcome Back!</h1>
+	<p>Log in and view your major choice!</p>
 
 	<form method="POST" action="login.php">
 		<div>
