--- a/public_html/login/index.html
+++ b/public_html/login/index.html
@@ -8,6 +8,9 @@
 		div{text-align: center;}
 		h1{text-align: center;}
 		p{text-align: center;}
+		font-family: tahoma;
+  		color: white;
+  		background-color: #96C5D7;
 		
 	</style>
 <body>
