--- a/public_html/signup/index.html
+++ b/public_html/signup/index.html
@@ -1,12 +1,21 @@
 <!Doctype html>
 <html>
 <head>
-	<title>Signup</title>
+	<title>Sign-Up</title>
 	<meta charset="UTF-8">
 </head>
+	<style>
+		h1{text-align: center;}
+		p{text-align: center;}
+		div{text-align: center;}
+		font-family: tahoma;
+  		color: white;
+  		background-color: #96C5D7;
+	</style>
 <body>
 
-	<h1>Signup</h1>
+	<h1>Join our Website!</h1>
+	<p>Join to view a description of your major and careers you can follow!</p>
 
 	<form method="POST" action="signup.php">
 		<div>
