--- a/public_html/majors/computer_science/index.html
+++ b/public_html/majors/computer_science/index.html
@@ -19,6 +19,15 @@ body {
       a {font-size: 12px;}
 
 </style>
+	  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S86P6C0P1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S86P6C0P1E');
+</script>
   </head>
   <body>
     <h1>Computer Science</h1><br>
