--- a/public_html/login/index.html
+++ b/public_html/login/index.html
@@ -13,6 +13,16 @@
   		background-color: #96C5D7;
 		
 	</style>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S86P6C0P1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S86P6C0P1E');
+</script>
+
 <body>
 
 	<h1>Welcome Back!</h1>
