--- a/public_html/signup/index.html
+++ b/public_html/signup/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Sign-Up</title>
 	<meta charset="UTF-8">
-</head>
 	<style>
 		h1{text-align: center;}
 		p{text-align: center;}
@@ -12,6 +11,17 @@
   		color: white;
   		background-color: #96C5D7;
 	</style>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S86P6C0P1E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S86P6C0P1E');
+</script>
+	</head>
+
 <body>
 
 	<h1>Join our Website!</h1>
