--- a/public_html/login/index.html
+++ b/public_html/login/index.html
@@ -10,6 +10,7 @@
 		font-family: tahoma;
   		color: white;
   		background-color: #96C5D7;
+		button {left: 50%;}
 		
 	</style>
 	<!-- Google tag (gtag.js) -->
