--- a/public_html/signup/index.html
+++ b/public_html/signup/index.html
@@ -10,6 +10,7 @@
 		font-family: tahoma;
   		color: white;
   		background-color: #96C5D7;
+		button {left: 50%;}
 	</style>
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S86P6C0P1E"></script>
